# gptOS

./: README.md  pyproject.toml  scratchpad0.md
computatrum/: kernel.py
computatrum/apps/: app.py  home.py  single_page_app.py
computatrum/apps/personal/: introspection.py
computatrum/lmi/components/: component.py  numbered_list.py  scrollable.py  stack.py  text.py
computatrum/lmi/windows/: window.py
computatrum/primitives/: embedding.py  memory.py  notification.py  screens.py  tool.py
computatrum/services/: llm_service.py  notification_service.py  registry_service.py  window_service.py
computatrum/utils/: singleton.py
gptOS/abc/: process.py  service.py
gptOS/apps/: app.py  home.py
gptOS/apps/personal/: health.py
gptOS/lmi/: __init__.py  utils.py
gptOS/lmi/abstractions/: abstract_component.py
gptOS/lmi/components/: audio.py  button.py  clazz.py  component.py  description.py  flexbox.py  function.py  group.py  image.py  module.py  numbered_list.py  object.py  scrollbox.py  text.py  textbox.py  (+1 more)
gptOS/services/: focus_service.py  keyboard_service.py  llm_service.py  mouse_service.py  notification_service.py  registry_service.py  screen_service.py  service.py  task_service.py
gptOS/tools/: pyobj_tool.py  toolbox.py
gptos-old/primitives/: memory.py
gptos-old/utils/: constants.py
gptos/abc/: service.py  task.py
gptos/apps/: README  app.py  home.py  single_page_app.py
gptos/internal/: kernel.py
gptos/lmi/: README.md  __init__.py
gptos/services/: focus_service.py  keyboard_service.py  mouse_service.py  screen_service.py  service.py
(+35 files in other folders)
