[tool.poetry]
name = "gptos"
version = "0.0.1"
description = ""
authors = ["Jacob Valdez <jacob.valdez@limboid.ai>"]
readme = "README.md"
liscense = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.124"
notify-py = "^0.3.42"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
