[tool.poetry]
name = "gptOS"
version = "0.0.1"
description = "Operating system for LLMs."
authors = [
    "ComputaCo <hello@computaco.ai>",
    "Jacob Valdez <jacob.valdez@computaco.ai>",
]
readme = "README.md"
license = "MIT"
homepage = "https://computaco.ai"
repository = "https://github.com/ComputaCo/gptOS"
keywords = ["lmi", "llm", "ai", "operating-system", "OS", "gptOS"]
packages = [{ include = "gptOS" }]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.124"
notify-py = "^0.3.42"
pydub = "^0.25.1"
stringcase = "^1.2.0"
moviepy = "^1.0.3"
roman = "^4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
